# live-bootcamp-project

./: .gitignore  README.md  compose.yml  docker.sh
.github/workflows/: prod.yml
app-service/: .vscode
app-service/src/: main.rs
auth-service/: .env  Cargo.toml  build.rs
auth-service/migrations/: 20250504172829_create_users_table.down.sql  20250504172829_create_users_table.up.sql
auth-service/src/: app_state.rs  domain.rs  lib.rs  main.rs  routes.rs  services.rs  utils.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  email_tests.rs  error.rs  password.rs  password_tests.rs  user.rs
auth-service/src/routes/: handler_helpers.rs  login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: config.rs  data_stores.rs  hashmap_2fa_code_store.rs  hashmap_2fa_code_store_tests.rs  hashmap_user_store.rs  hashmap_user_store_tests.rs  hashset_token_store.rs  hashset_token_store_tests.rs  mock_email_client.rs  postmark_email_client.rs  postmark_email_client_tests.rs
auth-service/src/services/config/: app_config.rs  app_constants.rs  config_keys.rs  smoker.rs  smoker_private.rs
auth-service/src/services/data_stores/: hashmap_2fa_code_store.rs  hashmap_2fa_code_store_tests.rs  hashmap_user_store.rs  hashmap_user_store_tests.rs  hashset_token_store.rs  hashset_token_store_tests.rs  postgres_user_store.rs  postgres_user_store_tests.rs  redis_2fa_code_store.rs  redis_banned_token_store.rs
auth-service/src/utils/: auth.rs  auth_tests.rs  constants.rs  hash_utils.rs  hash_utils_tests.rs  obfuscate.rs  secure_hash.rs  tracing.rs
auth-service/tests/api/: helpers.rs  helpers_arrange.rs  helpers_assert.rs  helpers_harness.rs  login.rs  logout.rs  main.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
