[package]
name    = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2            = "0.5.3"
async-trait       = "0.1.78"
axum              = "0.7.4"
axum-extra        = { version = "0.9.2", features = ["cookie"] }
base64            = "0.22.1"
chrono            = "0.4.35"
dotenvy           = "0.15.7"
getrandom         = "0.2"
jsonwebtoken      = "9.2.0"
lazy_static       = "1.4.0"
rand              = "0.9.1"
serde             = { version = "1.0",   features = ["derive"]      }
serde_json        = "1.0"
tokio             = { version = "1.36",  features = ["full"]        }
tower-http        = { version = "0.5.0", features = ["fs", "cors"]          }
uuid              = { version = "1.7.0", features = ["v4", "serde"] }
validator         = "0.16.1"

[dev-dependencies]
fake              = { version = "4.3.0", default-features = false, features = ["derive"] }
quickcheck        = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest           = { version = "0.11.26", default-features = false, features = ["json", "cookies"] }
