# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                = "auth-service"
version             = "0.1.0"
edition             = "2021"

[dependencies]
argon2              = {version = "0.5.3", features = ["std"] }
async-trait         = "0.1.78"
axum                = "0.7.4"
axum-extra          = {version = "0.9.2", features = ["cookie"] }
base64              = "0.22.1"
color-eyre          = "0.6.3"
chrono              = "0.4.35"
dotenvy             = "0.15.7"
getrandom           = "0.2"
jsonwebtoken        = "9.2.0"
lazy_static         = "1.4.0"
rand                = "0.8.5"
redis               = {version = "0.25.2", features = ["tokio-comp"]}
reqwest             = {version = "0.11.26", default-features = false, features = ["cookies", "json", "rustls"] }
secrecy             = {version = "0.8.0", features = ["serde"]}
serde               = {version = "1.0",    features = ["derive"]}
serde_json          = "1.0"
sqlx                = { version = "0.8",   features = [ "runtime-tokio-rustls", "postgres", "migrate"] }
thiserror           = "1.0.58"
tokio               = {version = "1.36",  features = ["full"]}
tower-http          = {version = "0.5.0", features = ["cors", "fs", "trace"]}
tracing             = "0.1.41"
tracing-error       = "0.2.0"
tracing-subscriber  = {version = "0.3.18", features = ["registry", "env-filter"] }
twox-hash           = "1.6"
ulid                = "1.2"
uuid                = {version = "1.7.0", features = ["v4", "serde"]}
validator           = "0.16.1"
log = "0.4.22"

[dev-dependencies]
##fake                = {version = "4.3.0", default-features = false, features = ["derive"] }
fake                = "=2.3.0"
quickcheck          = "0.9.2"
quickcheck_macros   = "0.9.1"
##reqwest             = {version = "0.11.26", default-features = false, features = ["json", "cookies"] }
wiremock            = "0.6.0"
